--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
+    "next": "16.0.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.2"
+    "react-icons": "^5.5.0",
+    "react-scroll": "^1.9.3",
+    "swiper": "^12.0.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
